--- a/.github/workflows/authenticate-gcp.yml
+++ b/.github/workflows/authenticate-gcp.yml
@@ -1,4 +1,4 @@
-name: Authenticate GCP Account
+name: Authenticate with GCP
 
 on:
   push:
@@ -9,7 +9,11 @@ jobs:
   authenticate:
     runs-on: ubuntu-latest
     steps:
-      - name: Authenticate with Google Cloud Platform
-        uses: google-github-actions/authenticate@v0
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS}}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
