--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           gcloud auth configure-docker
 
-      - name: Tag Docker image for Artifact Registry
-        run: docker tag your-image-name:latest gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
+      - name: Build Docker image
+        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/your-image-name:latest .
 
       - name: Push Docker image to Artifact Registry
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
+        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/your-image-name:latest
