--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -13,9 +13,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+        uses: google-github-actions/setup-gcloud@v1
+
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v0
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
       - name: Configure Docker to use gcloud as a credential helper
