--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["Authenticate with GCP"]
     types:
-     - completed_success
+     - completed
 
 jobs:
   build:
