--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["Build Docker Image"]
     types:
-      - completed_success
+      - completed
  
 jobs:
   push:
