--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -45,4 +45,4 @@ jobs:
       #   run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
 
       - name: Push Docker image to Artifact Registry
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
+        run: docker push test/${{ secrets.GCP_PROJECT_ID }}/test:latest
