--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -41,8 +41,6 @@ jobs:
           gcloud artifacts repositories create test --location=us-central1 --repository-format=docker
 
 
-      # - name: Build Docker image
-      #   run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
+      - name: Build Docker image
+        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
 
-      - name: Push Docker image to Artifact Registry
-        run: docker push test/${{ secrets.GCP_PROJECT_ID }}/test:latest
