--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -1,30 +1,31 @@
-name: Push Docker Image to Artifact Registry
+name: Build and Push Docker Image
 
 on:
   workflow_run:
-    workflows: ["Build Docker Image"]
+    workflows: ["Authenticate with GCP"]
     types:
       - completed
- 
+
 jobs:
-  push:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v1
-
-      - name: Authenticate with Google Cloud
-        uses: google-github-actions/auth@v1
+        uses: google-github-actions/setup-gcloud@v0
         with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
-      - name: Configure Docker to use gcloud as a credential helper
+      - name: Authenticate Docker to Google Artifact Registry
         run: |
-          gcloud auth configure-docker
+          gcloud auth configure-docker "REGION-docker.pkg.dev" --quiet
 
-      - name: Push Docker image to Artifact Registry
+      - name: Build Docker image
+        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
+
+      - name: Push Docker image to Google Artifact Registry
         run: |
           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
