--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -1,31 +1,49 @@
-name: Build and Push Docker Image
+name: Push Docker Image to Artifact Registry
 
 on:
   workflow_run:
-    workflows: ["Authenticate with GCP"]
+    workflows: ["Build Docker Image"]
     types:
       - completed
-
+ 
 jobs:
-  build-and-push:
+  push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+        uses: google-github-actions/setup-gcloud@v1
 
-      - name: Authenticate Docker to Google Artifact Registry
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+      - name: Configure Docker to use gcloud as a credential helper
         run: |
-          gcloud auth configure-docker "REGION-docker.pkg.dev" --quiet
+          gcloud auth configure-docker
+
+      - name: Check if the repository exists
+        id: check_repo
+        run: |
+          if gcloud artifacts repositories describe test --location=us-central1 >/dev/null 2>&1; then
+            echo "::set-output name=exists::true"
+          else
+            echo "::set-output name=exists::false"
+          fi
+        continue-on-error: true
+
+      - name: Create the repository if it doesn't exist
+        if: steps.check_repo.outputs.exists == 'false'
+        run: |
+          gcloud artifacts repositories create test --location=us-central1 --repository-format=docker
+
 
       - name: Build Docker image
         run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
 
-      - name: Push Docker image to Google Artifact Registry
+      - name: Push Docker image to Artifact Registry
         run: |
           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
