--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       # - name: Build Docker image
       #   run: docker build -t test:latest .
 
-      - name: Build Docker image
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
+      # - name: Build Docker image
+      #   run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
 
     
