--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -1,51 +1,3 @@
-# name: Build and Push Docker Image
-
-# on:
-#   workflow_run:
-#     workflows: ["Build Docker Image"]
-#     types:
-#       - completed
- 
-# jobs:
-#   build-and-push:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v2
-
-#       - name: Set up Google Cloud SDK
-#         uses: google-github-actions/setup-gcloud@v1
-
-#       - name: Authenticate with Google Cloud
-#         uses: google-github-actions/auth@v1
-#         with:
-#           credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
-#       - name: Configure Docker to use gcloud as a credential helper
-#         run: |
-#           gcloud auth configure-docker
-
-#       - name: Check if the repository exists
-#         id: check_repo
-#         run: |
-#           if gcloud artifacts repositories describe test --location=us-central1 >/dev/null 2>&1; then
-#             echo "::set-output name=exists::true"
-#           else
-#             echo "::set-output name=exists::false"
-#           fi
-#         continue-on-error: true
-
-#       - name: Create the repository if it doesn't exist
-#         if: steps.check_repo.outputs.exists != 'true'
-#         run: |
-#           gcloud artifacts repositories create test --location=us-central1 --repository-format=docker
-
-#       - name: Build and Push Docker image to Artifact Registry
-#         run: |
-#           docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
-#           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
-
-
 name: Build and Push Docker Image
 
 on:
@@ -69,26 +21,27 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
+      - name: Configure Docker to use gcloud as a credential helper
+        run: |
+          gcloud auth configure-docker
+
       - name: Check if the repository exists
         id: check_repo
         run: |
-          if gcloud artifacts repositories describe ${{ env.REPOSITORY_NAME }} --location=us-central1 >/dev/null 2>&1; then
+          if gcloud artifacts repositories describe $ --location=us-central1 >/dev/null 2>&1; then
             echo "::set-output name=exists::true"
           else
             echo "::set-output name=exists::false"
           fi
         continue-on-error: true
 
-      - name: Create the repository if it doesn't exist
-        if: steps.check_repo.outputs.exists != 'true'
-        run: |
-          gcloud artifacts repositories create ${{ env.REPOSITORY_NAME }} --location=us-central1 --repository-format=docker
-
-      - name: Configure Docker to use gcloud as a credential helper
-        run: |
-          gcloud auth configure-docker
+      # - name: Create the repository if it doesn't exist
+      #   if: steps.check_repo.outputs.exists != 'true'
+      #   run: |
+      #     gcloud artifacts repositories create test --location=us-central1 --repository-format=docker
 
       - name: Build and Push Docker image to Artifact Registry
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY_NAME }}:latest .
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.REPOSITORY_NAME }}:latest
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
+
