--- a/.github/workflows/push-to-artifact-registry.yml
+++ b/.github/workflows/push-to-artifact-registry.yml
@@ -42,6 +42,6 @@ jobs:
 
       - name: Build and Push Docker image to Artifact Registry
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
+          # docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest .
           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/test:latest
 
