--- a/.github/workflows/authenticate-gcp.yml
+++ b/.github/workflows/authenticate-gcp.yml
@@ -1,9 +1,9 @@
 name: Authenticate with GCP
+
 on:
-  workflow_run:
-    workflows: ["Python Lint and SonarQube Scan"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 jobs:
   authenticate:
     runs-on: ubuntu-latest
