--- a/.github/workflows/authenticate-gcp.yml
+++ b/.github/workflows/authenticate-gcp.yml
@@ -1,9 +1,28 @@
+# name: Authenticate with GCP
+
+# on:
+#   push:
+#     branches:
+#       - main
+# jobs:
+#   authenticate:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Set up Google Cloud SDK
+#         uses: google-github-actions/setup-gcloud@v0
+#         with:
+#           project_id: ${{ secrets.GCP_PROJECT_ID }}
+#           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 name: Authenticate with GCP
 
 on:
   push:
     branches:
       - main
+
 jobs:
   authenticate:
     runs-on: ubuntu-latest
